spade-tests/src/snapshots/spade_tests__parser__macro_pattern_repetition_unexpected_closing_brace.snap
---
source: spade-tests/src/parser.rs
---
macro test($()}) {}


error: Unexpected enclosing delimiter found while parsing macro pattern
  ┌─ testinput:1:15
  │
1 │ macro test($()}) {}
  │               ^
  │               │
  │               `}` is an enclosing delimiter
  │
  = note: Enclosing delimiters cannot be used in this context
